<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="shrine_product_description">
    离开隧道，雨正在下，当你等待的时候，奇妙的事情发生了
    </string>
    <string name="app_name">File Collect</string>
    <string name="action_settings">Settings</string>
    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
    <string name="search_hint">请输入要搜索的内容&#8230;</string>
    <string name="shrine_product_category">Best Gifts for Teen Girls</string>
    <string name="shrine_icon_search_title">Search</string>
    <string name="shrine_icon_filter_title">Filter</string>
    <string name="shrine_bottom_nav_favorites">Favorites</string>
    <string name="shrine_bottom_nav_home">Home</string>
    <string name="shrine_bottom_nav_cart">Cart</string>

    <string name="paste">粘贴</string>
    <string name="search">搜索</string>
    <string name="home">首页目录</string>
    <string name="sort">排序</string>
    <string name="sortby">排序方式</string>
    <string name="directorysort">目录排序方式</string>
    <string name="history">历史记录</string>
    <string name="hiddenfiles">已隐藏文件</string>
    <string name="extract">提取</string>
    <string name="ok">确定</string>
    <string name="exit">退出应用</string>
    <string name="listview">列表视图</string>
    <string name="gridview">网格视图</string>
    <!--SortBy-->
    <string name="sortName">名称</string>
    <string name="lastModified">最后修改时间</string>
    <string name="sortSize">大小</string>
    <string name="type">类型</string>

    <string name="ascending">升序排列</string>
    <string name="descending">降序排列</string>

    <string name="name">包名</string>
    <string name="apk_name">应用名</string>
    <string name="calculating">正在计算</string>
    <string name="date">日期</string>
    <string name="location">路径</string>
    <string name="size_capitalized">大小</string>
    <string name="size">文件夹大小</string>
    <string name="version">版本</string>
    <string name="current_version">已安装版本</string>
    <string name="properties">属性</string>
    <string name="hash_sha256">SHA-256</string>
    <string name="md5">MD5</string>

    <string name="clipboard_path_copy">路径已复制到剪切板</string>
    <string name="properties_copied_clipboard">已复制到剪切板</string>

    <string name="noitems">无项目</string>
    <string name="item">项目</string>
    <string name="items">个项目</string>

    <string name="byte_singular">字节</string>
    <string name="bytes">字节</string>
    <string name="loading">正在载入&#8230;</string>
    <string name="used">已用空间</string>
    <string name="used_by_others">已被其他人使用</string>
    <string name="free">剩余空间</string>
    <string name="total">总计：</string>
    <string name="error">错误</string>
    <string name="title_activity_settings">Settings</string>
    <string name="shrine_filter_page_title">Filters</string>
    <string name="title">设置</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
