
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_white_24dp"/>
    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_white_24dp">
    </item>
    <item
        android:id="@+id/view"
        android:title=""/>

    <!-- orderInCategory=100 to have the element exit always at the end of the list -->
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="100"/>

</menu>
